--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,15 @@ body {
   height: 100vh;
   /* overflow-x: hidden; */
 }
+
+@layer utilities {
+  .clip-pattern {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+}
